--- a/style.css
+++ b/style.css
@@ -11,33 +11,32 @@ body {
   color: #2f2f2f;
 }
 
-#navbar {
+#aula {
   background-color: #4e714c;
   padding: 1rem 0;
 }
 
-#navbar ul {
+#aula ul {
   display: flex;
   justify-content: center;
   list-style: none;
 }
 
-#navbar li {
+#aula li {
   margin: 0 1.5rem;
 }
 
-#navbar a {
+#aula a {
   color: #fffce9;
   text-decoration: none;
   font-weight: bold;
   font-size: 1rem;
 }
 
-#navbar a:hover {
+#aula a:hover {
   color: #cfe8c9;
 }
 
-/* Cabeçalho */
 header {
   background-color: #f5ecd8;
   text-align: center;
